# TMS_DRFProject

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
TMS_DRFProject/: asgi.py  celery.py  middlewares.py  settings.py  urls.py  wsgi.py
docs/: JWT.drawio  TMS_DRF.postman_collection.json  drf-cbv.drawio  ex2.docx  tokens.drawio
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  main.ts  router.ts  vite-env.d.ts
frontend/src/components/: Editor.vue  Header.vue  LoginForm.vue  LogoutButton.vue  NoteElement.vue  NoteFilter.vue  RegisterForm.vue  TagEditor.vue  TagSelect.vue  UploadNotePreview.vue  Welcome.vue
frontend/src/pages/: CreateNote.vue  Home.vue  NoteDetail.vue
frontend/src/services/: api.ts  auth.service.ts  errorFmt.ts  filter.ts  formats.ts  notes.ts  setupInterceptors.ts  user.ts
frontend/src/store/: auth.module.ts
notes/: models.py  tasks.py
notes/api/: filters.py  serializers.py  urls.py  views.py
notes/api/schemas/: serializers.py
notes/migrations/: 0001_initial.py  0002_alter_note_image.py  0003_note_status.py
users/: models.py  tasks.py
users/api/: permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
users/tests/: test_permissions.py  test_serializers.py
